compile.log
/main.cpp: In function ‘void readData(Reader&)’:
/main.cpp:122:24: warning: variable ‘alma’ set but not used [-Wunused-but-set-variable]
             Rendezendo alma;
                        ^~~~
/main.cpp: In function ‘int main()’:
/main.cpp:174:24: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<Data>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
         for (int i=0; i<reader.dataArray.size(); i++)
                       ~^~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:194:35: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<Data>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
                     for(int j=0; j<reader.dataArray.size(); j++)
                                  ~^~~~~~~~~~~~~~~~~~~~~~~~
/main.cpp:196:59: warning: comparison of integer expressions of different signedness: ‘unsigned int’ and ‘int’ [-Wsign-compare]
                         if(reader.dataArray[j].currStoreId==i && reader.dataArray[j].currRouter==alaprouter )
/main.cpp:270:19: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
     for(int i=0; i<azenyem.size(); i++)
                  ~^~~~~~~~~~~~~~~
/main.cpp:286:19: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<MessagePiece>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
     for(int i=0; i<azenyem.size(); i++)
                  ~^~~~~~~~~~~~~~~
/main.cpp:288:30: error: expected primary-expression before ‘[’ token
         std::cerr<<Rendezendo[i].indexem<<" "<<Rendezendo[i].ertek<<std::endl;
                              ^
/main.cpp:288:58: error: expected primary-expression before ‘[’ token
         std::cerr<<Rendezendo[i].indexem<<" "<<Rendezendo[i].ertek<<std::endl;
                                                          ^
/main.cpp:148:9: warning: unused variable ‘befutott’ [-Wunused-variable]
     int befutott=0;
         ^~~~~~~~